--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
         crossorigin="anonymous">
@@ -23,22 +24,55 @@
             </div>
         </div>
         <div class="jumbotron">
-            <div class="row">
-                <div id="schedule">
-                    <tr>
-                        <td>Train Name</td>
-                        <td>Destination</td>
-                        <td>Frequency (min)</td>
-                        <td>Next Arrival</td>
-                        <td>Minutes Away</td>
-                    </tr>
-                </div>
+            <div class="panel-heading">
+                <h3 class="panel-title"><strong>Current Train</strong></h3>
             </div>
+            <table class="table table-striped" id="trainSchedule">
+                <thead>
+                    <tr>
+                        <th scope="col">Train Name</th>
+                        <th scope="col">Destination</th>
+                        <th scope="col">Frequency (min)</th>
+                        <th scope="col">Next Arrival</th>
+                        <th scope="col">Minutes Away</th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
         </div>
         <div class="jumbotron">
             <div class="row">
                 <div id="inputs">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><strong>Add a New Train</strong></h3>
+                        </div>
 
+                        <div class="panel-body">
+                            <!-- Entry Form -->
+                            <form>
+                                <div class="form-group">
+                                    <label for="">Train Name</label>
+                                    <input type="text" class="form-control" id="trainNameInput">
+                                </div>
+                                <div class="form-group">
+                                    <label for="">Destination</label>
+                                    <input type="text" class="form-control" id="destinationInput">
+                                </div>
+                                <div class="form-group">
+                                    <label for="">First Train Time (HH:mm - military time)</label>
+                                    <input type="text" class="form-control" id="trainTimeInput">
+                                </div>
+                                <div class="form-group">
+                                    <label for="">Frequency (min)</label>
+                                    <input type="text" class="form-control" id="frequencyInput">
+                                </div>
+                                <button type="submit" class="btn btn-primary" id="addTrainBtn">Submit</button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -48,8 +82,6 @@
     <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
     <script src="assets/javascript/app.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
